Created simple lume app with a rotating plane

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+body,
+html {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#node {
+  background: cornflowerblue;
 }
